--- a/Faster5/app/src/main/res/layout/login_screen.xml
+++ b/Faster5/app/src/main/res/layout/login_screen.xml
@@ -14,29 +14,21 @@
         android:id="@+id/LoGo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/FACEBOOK"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="149dp"
         android:src="@drawable/logo" />
 
-    <ImageButton
-        android:id="@+id/FACEBOOK"
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/fblogin_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/LoGo"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="#00000000"
-        android:src="@drawable/fbbutton" />
+        android:layout_gravity="center_horizontal" />
 
-    <ImageButton
-        android:id="@+id/GOOGLE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/FACEBOOK"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:background="#00000000"
-        android:src="@drawable/gbutton" />
+
 
 
 </RelativeLayout>
