--- a/Faster5/app/src/main/res/layout/login_screen.xml
+++ b/Faster5/app/src/main/res/layout/login_screen.xml
@@ -2,33 +2,65 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/BackGround"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.example.gcs.faster5.MainActivity">
 
     <ImageView
-        android:id="@+id/LoGo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="149dp"
-        android:src="@drawable/logo" />
+        android:id="@+id/textlogin"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/text" />
 
     <com.facebook.login.widget.LoginButton
-        android:id="@+id/fblogin_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/fbbutton"
+        style="@style/FacebookLoginButton"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/LoGo"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginTop="120dp"
+        android:drawableLeft="@null"
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp" />
 
 
+    <ImageView
+        android:id="@+id/roundrec"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/fbbutton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/roundrec" />
+
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="275dp"
+        android:background="@android:color/transparent"
+        android:ellipsize="end"
+        android:ems="1"
+        android:gravity="center"
+        android:inputType="none"
+        android:maxLength="16"
+        android:singleLine="true"
+        android:textSize="25dp" />
+
+    <ImageButton
+        android:id="@+id/playbutton"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignBottom="@+id/textlogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:scaleType="centerInside"
+        android:src="@drawable/playbutton" />
 
 
 </RelativeLayout>
