--- a/Faster5/app/src/main/res/layout/main_screen.xml
+++ b/Faster5/app/src/main/res/layout/main_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/BackGround"
+    android:id="@+id/background"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
