--- a/Faster5/app/src/main/res/values/styles.xml
+++ b/Faster5/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+    <style name="FacebookLoginButton">
+        <item name="android:background">@drawable/fbbutton</item>
+        <item name="android:textSize">0sp</item>
+        <item name="android:gravity">center</item>
     </style>
 
 </resources>
