--- a/Faster5/app/src/main/res/layout/login_screen.xml
+++ b/Faster5/app/src/main/res/layout/login_screen.xml
@@ -4,14 +4,55 @@
     android:id="@+id/BackGround"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.example.gcs.faster5.MainActivity">
 
     <ImageView
         android:id="@+id/textlogin"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true" />
+
+
+    <ImageView
+        android:id="@+id/roundrec"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignBottom="@+id/editText"
+        android:layout_alignTop="@+id/editText"
+        android:layout_centerHorizontal="true" />
+
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@android:color/transparent"
+        android:duplicateParentState="true"
+        android:ellipsize="end"
+        android:ems="1"
+        android:foregroundGravity="left"
+        android:gravity="center"
+        android:inputType="none"
+        android:maxLength="16"
+        android:paddingBottom="200dp"
+        android:paddingTop="200dp"
+        android:singleLine="true"
+        android:textSize="25sp" />
+
+    <ImageButton
+        android:id="@+id/playbutton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textlogin"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/text" />
+        android:layout_marginBottom="170dp"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:scaleType="centerInside"
+        android:src="@drawable/playbutton" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/fbbutton"
@@ -24,43 +65,23 @@
         android:paddingBottom="30dp"
         android:paddingTop="30dp" />
 
-
     <ImageView
-        android:id="@+id/roundrec"
-        android:layout_width="200dp"
+        android:id="@+id/connectfail"
+        android:layout_width="wrap_content"
         android:layout_height="200dp"
-        android:layout_below="@+id/fbbutton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/roundrec" />
-
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="275dp"
-        android:background="@android:color/transparent"
-        android:ellipsize="end"
-        android:ems="1"
-        android:gravity="center"
-        android:inputType="none"
-        android:maxLength="16"
-        android:singleLine="true"
-        android:textSize="25dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="150dp" />
 
     <ImageButton
-        android:id="@+id/playbutton"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignBottom="@+id/textlogin"
+        android:id="@+id/tryagainButton"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:adjustViewBounds="true"
+        android:layout_centerVertical="true"
         android:background="@null"
-        android:scaleType="centerInside"
-        android:src="@drawable/playbutton" />
+        android:scaleType="centerInside" />
 
 
 </RelativeLayout>
