--- a/Faster5/app/src/main/res/values/styles.xml
+++ b/Faster5/app/src/main/res/values/styles.xml
@@ -14,4 +14,13 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="ButtonAnswerStyle">
+        <item name="android:background">@drawable/opt</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
 </resources>
